# tellog

./: .gitignore  README.md  main.py  pyproject.toml  start.py
src/: example.py
src/tellog/: __init__.py  tellog.py
src/tellog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
telegram_computer_log/: __init__.py  logger.py  main.py  test.py
tellog/: __init__.py
